--- a/main_app/static/css/home.css
+++ b/main_app/static/css/home.css
@@ -16,7 +16,7 @@ main {
   }
 
   img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
   }
   
@@ -29,7 +29,8 @@ main {
   }
   
   .cat-container {
-    width: 80%;
+    max-width: 100%;
+    height: auto;
   }
   
   .login {
