--- a/main_app/templates/gears/index.html
+++ b/main_app/templates/gears/index.html
@@ -18,17 +18,34 @@
     <div class="card">
       <div class="card-content">
         <div class="card-img-container">
+            {% comment %} {% if gear.type = 'Guitar' %}
+                <img 
+                src="{% static 'images/icons8-electric-guitar-96.png' %}"
+                alt="An electric guitar"
+                />
+            {% elif gear.type = 'Bass' %}
+                <img 
+                src="{% static 'images/icons8-bass-guitar-96.png' %}"
+                alt="A bass guitar"
+                />
+            {% elif gear.type = 'Percussion' %}
+                <img 
+                src="{% static 'images/icons8-drum-kit-96.png' %}"
+                alt="A drum kit"
+                />
+            {% else %}
+                <img 
+                src="{% static 'images/icons8-band-96.png' %}"
+                alt="A microphone, guitar and bass headstock, and drum sticks"
+                />
+          {% endif %} {% endcomment %}
           <img
-            src="{% static 'images/sk8r-boi-cat.svg' %}"
-            alt="A skater boy cat"
+          src="{% static 'images/icons8-band-96.png' %}"
+          alt="A microphone, guitar and bass headstock, and drum sticks"
           />
         </div>
-        <h2 class="card-title">{{ gear.name }}</h2>
-        {% if gear.age > 0 %}
-        <p>A {{ gear.age }} year old {{ gear.breed }}</p>
-        {% else %}
-        <p>A {{ gear.breed }} kitten.</p>
-        {% endif %}
+        <h2 class="card-title">{{ gear.model }}</h2>
+        <p>Make: {{ gear.make }}</p>
         <p><small>{{ gear.description }}</small></p>
       </div>
     </div>
