issue with detail page not finding the id

--- a/main_app/templates/gears/index.html
+++ b/main_app/templates/gears/index.html
@@ -16,7 +16,7 @@
 <section class="card-container">
   {% for gear in gears %}
     <div class="card">
-    <a href='/gears/{{ gear.id }}'>
+    <a href='/gear/{{ gear.id }}'>
       <div class="card-content">
         <div class="card-img-container">
             {% if gear.type == 'G' %}
