--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -12,4 +12,16 @@
   <img src="{% static 'images/header-logo.png' %}" alt="Text Reads: Alfred Be Loud Gear Vault" />
 </section>
 
+{% if not user.is_authenticated %}
+    <section>
+    <form action="{% url 'home' %}" method="post" class="login">
+        <h1>Login</h1>
+        {% csrf_token %} {{ form.as_p }}
+        <input type="hidden" name="next" value="{{ next }}" />
+        <button type="submit" class="btn submit">Login</button>
+    </form>
+    </section>
+{% endif %}
+
+
 {% endblock %}
