--- a/main_app/templates/users/index.html
+++ b/main_app/templates/users/index.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <section class="page-header">
-  <h1>Gear Vault</h1>
+  <h1>{{ user.username }}'s Gear Vault</h1>
   <img src="{% static 'images/icons8-mic-96.png' %}" alt="A microphone" />
   <img src="{% static 'images/icons8-electric-guitar-96.png' %}" alt="An electric guitar" />
   <img src="{% static 'images/icons8-bass-guitar-96.png' %}" alt="An electric bass guitar" />
@@ -47,7 +47,6 @@
           {% endif %}
         </div>
         <h2 class="card-title">{{ gear.model }}</h2>
-        <p>Played by {{ username }}</p>
         <p>Make: {{ gear.make }}</p>
         <p><small>{{ gear.description }}</small></p>
       </div>
